--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
       <div class='card'>
         <form>
           <label>Enter a secret message</label>
-          <input type='text' />
+          <input id="message-input" type='text' />
           <button>Submit</button>
         </form>
+      </div>
+      <div>
+        <p>Share this link with a friend</p>
+        <input id="link-input" />
       </div>
     </div>
     <script src="index.js"></script>
