--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class='container'>
-      <div class='card'>
+    <div class="container">
+
+      <div class="card hide" id="message-show">
+        <h1></h1>
+        <a href="./index.html">Write your own secret message</a>
+      </div>
+
+      <div class="card" id="message-form">
         <form>
           <label>Enter a secret message</label>
-          <input id="message-input" type='text' />
+          <textarea id="message-input" type='text' cols="50"></textarea>
           <button>Submit</button>
         </form>
       </div>
-      <div>
-        <p>Share this link with a friend</p>
-        <input id="link-input" />
+      <div class="card hide" id="link-form">
+        <p>Share the link</p>
+        <input id="link-input" size="60"/>
       </div>
     </div>
     <script src="index.js"></script>
