edits to styling and dom selectors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="card hide" id="link-form">
         <h1>Share the link</h1>
         <input id="link-input" size="60"/>
+        <a id="message-preview"><p>View Message</p></a>
       </div>
     </div>
     <script src="index.js"></script>
